# ai-center

./: .coverage  .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  WORKFLOW_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: auth.py  main.py  nacos.py  schemas.py
app/providers/: __init__.py  anthropic_provider.py  base.py  compatible_provider.py  gemini_provider.py  mock_provider.py  openai_provider.py
app/routers/: ai.py
bmad/: config.yaml
docs/: bmm-workflow-status.yaml  product-brief.md
scripts/: start.sh
src/ai_center/: __init__.py  config.py  main.py
src/ai_center/api/v1/: analyze.py  health.py  workflow.py
src/ai_center/core/: almond_analyzer.py
src/ai_center/llm/: base.py  factory.py  openai.py  qwen.py
src/ai_center/llm/prompts/: classification.py  enrichment.py  evolution.py  retrospect.py  understanding.py
src/ai_center/models/: enums.py  requests.py  responses.py
src/ai_center/utils/: logger.py
src/ai_center/workflow/: graph_builder.py  notes.py  state.py
src/examples/: workflow_demo.py
src/tests/: test_workflow.py
tests/: test_brain.py  test_brain_extras.py  test_hands.py  test_integration.py  test_mcp_hand_extras.py  test_session_store.py  test_task_agent.py  test_task_tools.py
