[project]
name = "ai-center"
version = "0.1.0"
description = "Unified AI capability center using FastAPI and LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pyjwt>=2.10.1",
  "pydantic>=2.7",
  "httpx>=0.28.0",
  "langchain-core>=1.1,<2",
  "langchain-openai>=1.1,<2",
  "langchain-anthropic>=1.1,<2",
  "tiktoken>=0.7,<1",
  "openai>=1.0.0",
  "anthropic>=0.40.0",
]

