[project]
name = "ai-center"
version = "0.1.0"
description = "Unified AI capability center using FastAPI and LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pyjwt>=2.10.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.0.0",
  "httpx>=0.28.0",
  "langchain-core>=0.3.0,<0.4.0",
  "langchain-openai>=0.2.0,<0.3.0",
  "langchain-anthropic>=0.3.0,<0.4.0",
  "langchain-google-genai>=2.0.0,<3.0.0",
  "langgraph>=0.3.1,<0.4.0",
  "tiktoken>=0.7,<1",
  "dashscope>=1.20.0",
  "python-json-logger>=2.0.7",
  "openai>=1.0.0",
  "anthropic>=0.40.0",
  "nacos-sdk-python>=2.1.0",
]
